--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -25,14 +25,15 @@ spec:
   replicas:
     min: 2
     max: 4
-    cpuThresholdPercentage: 75
+    scalingStrategy:
+      cpu:
+        thresholdPercentage: 75
   resources:
-    limits:
-      cpu: "1"
-      memory: 2048Mi
     requests:
-      cpu: 300m
-      memory: 1024Mi
+      cpu: 20m
+      memory: 512Mi
+    limits:
+      memory: 2048Mi
   accessPolicy:
     inbound:
       rules:
